# pragma_interfaces

./: CMakeLists.txt  README.md
iclient/: CMakeLists.txt
iclient/include/pragma/: iclient.h  iclientmodule.h  imatrix.h  iscene.h  ivector.h
iclient/src/: iclient.cpp  iclient_definitions.hpp  imatrix.cpp  iscene.cpp  ivector.cpp
iclient/src/implementation/: core.cpp  matrix.cpp  scene.cpp  vector.cpp
iclient/src/interface/: core.cppm  iclient.cppm  matrix.cppm  scene.cppm  vector.cppm
iserver/: CMakeLists.txt
iserver/include/pragma/: iserver.h
iserver/src/: definitions.hpp  iserver.cpp
iserver/src/implementation/: core.cpp
iserver/src/interface/: core.cppm  iserver.cppm
ishared/: CMakeLists.txt
ishared/include/pragma/: errorcode.h  ishared.hpp  pragma_module.hpp
ishared/src/: definitions.hpp  ishared.cpp
ishared/src/implementation/: core.cpp
ishared/src/interface/: core.cppm  ishared.cppm
